@@ -4,6 +4,7 @@ import be.kdg.ip3.archportal.profiles.domain.Library.Game;
 import be.kdg.ip3.archportal.profiles.domain.friendRequest.FriendRequest;
 import be.kdg.ip3.archportal.profiles.domain.profile.Profile;
 import be.kdg.ip3.archportal.profiles.domain.profile.ProfileId;
+import be.kdg.ip3.archportal.profiles.domain.profile.Section;
 import be.kdg.ip3.archportal.profiles.infrastructure.friendRequest.jpa.JpaFriendRequest;
 import jakarta.persistence.*;
 import lombok.Getter;
@@ -37,12 +38,16 @@ public class JpaProfileEntity {
     private int platformPoints;
 
     @ElementCollection
-    @CollectionTable(name = "profile_platform_benefits", joinColumns = @JoinColumn(name = "profile_id"), schema = "profileservice")
+    @CollectionTable(
+            name = "profile_platform_benefits",
+            schema = "profileservice",
+            joinColumns = @JoinColumn(name = "profile_id")
+    )
     @Column(name = "benefit_id", nullable = false)
     private List<UUID> platformBenefits = new ArrayList<>();
 
     @ElementCollection
-    @CollectionTable(name = "profile_library", joinColumns = @JoinColumn(name = "profile_id"), schema = "profileservice")
+    @CollectionTable(name = "profile_library", schema = "profileservice", joinColumns = @JoinColumn(name = "profile_id"))
     private List<JpaGameEntity> games = new ArrayList<>();
 
     @ElementCollection
@@ -50,15 +55,29 @@ public class JpaProfileEntity {
             uniqueConstraints = @UniqueConstraint(
                     name = "uq_friend_request_sender_receiver",
                     columnNames = {"sender_id", "receiver_id"}
-            ))
+            )
+    )
     private Set<JpaFriendRequest> incomingRequests = new HashSet<>();
 
-    public JpaProfileEntity() {
-    }
+    @ElementCollection
+    @CollectionTable(name = "profile_sections", schema = "profileservice", joinColumns = @JoinColumn(name = "profile_id"))
+    private List<JpaSectionEntity> sections = new ArrayList<>();
 
-    public JpaProfileEntity(UUID id, String firstName, String lastName, String email, String icon, String gamerTag,
-                            int platformPoints, List<UUID> platformBenefits, List<JpaGameEntity> library,
-                            Set<JpaFriendRequest> incomingRequests) {
+    protected JpaProfileEntity() {}
+
+    public JpaProfileEntity(
+            UUID id,
+            String firstName,
+            String lastName,
+            String email,
+            String icon,
+            String gamerTag,
+            int platformPoints,
+            List<UUID> platformBenefits,
+            List<JpaGameEntity> games,
+            Set<JpaFriendRequest> incomingRequests,
+            List<JpaSectionEntity> sections
+    ) {
         this.id = id;
         this.firstName = firstName;
         this.lastName = lastName;
@@ -67,18 +86,24 @@ public class JpaProfileEntity {
         this.gamerTag = gamerTag;
         this.platformPoints = platformPoints;
         this.platformBenefits = platformBenefits;
-        this.games = library;
+        this.games = games;
         this.incomingRequests = incomingRequests;
+        this.sections = sections;
     }
 
     public static JpaProfileEntity fromDomain(Profile profile) {
+
         Set<JpaFriendRequest> incoming = profile.getIncomingFriendRequests().stream()
                 .map(JpaFriendRequest::from)
                 .collect(Collectors.toSet());
 
-        List<JpaGameEntity> jpaLibrary = profile.getGames().stream()
-                .map(games -> new JpaGameEntity(games.getGameId(), games.isFavorite()))
-                .collect(Collectors.toList());
+        List<JpaGameEntity> jpaGames = profile.getGames().stream()
+                .map(game -> new JpaGameEntity(game.getGameId(), game.isFavorite()))
+                .toList();
+
+        List<JpaSectionEntity> jpaSections = profile.getSections().stream()
+                .map(JpaSectionEntity::fromDomain)
+                .toList();
 
         return new JpaProfileEntity(
                 profile.getId().id(),
@@ -89,18 +114,24 @@ public class JpaProfileEntity {
                 profile.getGamerTag(),
                 profile.getPlatformPoints(),
                 profile.getPlatformBenefits(),
-                jpaLibrary,
-                incoming
+                jpaGames,
+                incoming,
+                jpaSections
         );
     }
 
     public Profile toDomain() {
+
         Set<FriendRequest> incoming = incomingRequests.stream()
                 .map(JpaFriendRequest::toDomain)
                 .collect(Collectors.toSet());
 
         List<Game> domainGames = games.stream()
                 .map(JpaGameEntity::toDomain)
+                .collect(Collectors.toList());
+
+        List<Section> domainSections = sections.stream()
+                .map(JpaSectionEntity::toDomain)
                 .collect(Collectors.toList());
 
         return new Profile(
@@ -113,7 +144,8 @@ public class JpaProfileEntity {
                 gamerTag,
                 firstName,
                 domainGames,
-                incoming
+                incoming,
+                domainSections
         );
     }
 }
